--- a/app/views/layouts/profile.html.erb
+++ b/app/views/layouts/profile.html.erb
@@ -4,7 +4,8 @@
   </div>
   <div class="col-md-4">
     <div class="list-group">
-      <a href="<%= posts_path %>" class="list-group-item<%= yield(:tab) == 'posts' ? ' active' : '' %>">Mes photos</a>
+      <a href="<%= posts_path %>" class="list-group-item<%= yield(:tab) == 'posts' ? ' active' : '' %>">Mes animaux préférés</a>
+      <a href="<%= me_posts_path %>" class="list-group-item<%= yield(:tab) == 'me' ? ' active' : '' %>">Mes photos</a>
       <a href="<%= pets_path %>" class="list-group-item<%= yield(:tab) == 'pets' ? ' active' : '' %>">Mes animaux</a>
       <a href="<%= profil_path %>" class="list-group-item<%= yield(:tab) == 'profil' ? ' active' : '' %>">Mon compte</a>
     </div>
