--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,12 +1,10 @@
-<%  content_for  :content do %>
-
-  <section class="m-4">
-    <div class="container " style="width: 600px">
-      <h2>Creer un nouvelle animal</h2>
-        <%= render 'form', pet: @pet %>
+<% content_for :content do %>
+  <div class="panel panel-default">
+    <div class="panel-heading">Créer un nouvel animal</div>
+    <div class="panel-body">
+      <%= render 'form', pet: @pet %>
     </div>
-  </section>
-
+  </div>
 <% end %>
 
 <%= render template: 'layouts/profile' %>
